src/test/contracts/negative/emit_bad_tag.mligo
let main (_,_ : unit * string ) : operation list * string =
  [Mavryk.emit "%hello world" 12], "bye"
